--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -6,6 +6,12 @@ slug: /explore/redisinsight/streams
 authors: [ajeet]
 ---
 
+:::warning LETTUCE
+
+This tutorial uses Lettuce, which is an unsupported Redis library. For production applications, we recommend using [<u>**Jedis**</u>](https://github.com/redis/jedis)
+
+:::
+
 import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
