--- a/docs/operate/redis-at-scale/scalability/redis-cluster-and-client-libraries/index-redis-cluster-and-client-libraries.mdx
+++ b/docs/operate/redis-at-scale/scalability/redis-cluster-and-client-libraries/index-redis-cluster-and-client-libraries.mdx
@@ -42,7 +42,7 @@ Another detail to check is if the client stores the hash slot map locally. If it
 
 Examples of clients that support Redis cluster:
 
-- Java: Jedis, Lettuce
+- Java: Jedis
 - .NET: StackExchange.Redis
 - Go: Radix, go-redis/redis
 - Node.js: node-redis, ioredis
