further reading reference links added

--- a/docs/howtos/solutions/vector/getting-started-vector/index-getting-started-vector.mdx
+++ b/docs/howtos/solutions/vector/getting-started-vector/index-getting-started-vector.mdx
@@ -777,3 +777,7 @@ Vectors can also be stored in databases in **binary formats** to save space. In 
 ## Further reading
 
 - [Vector search in Redis 7.2](https://redis.com/blog/introducing-redis-7-2/)
+
+- [Redis VSS getting started](https://github.com/RedisVentures/redis-vss-getting-started)
+- [Redis vector use cases](https://redis.com/solutions/use-cases/vector-database/)
+- [Vector query docs](https://redis.io/docs/interact/search-and-query/search/vectors/)
