--- a/docs/howtos/quick-start/cheat-sheets/generic.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/generic.mdx
@@ -33,11 +33,11 @@ import TabItem from '@theme/TabItem';
       <td>
         <pre>
           <code>{`
-KEYS *name
+KEYS my*
 `}</code>
         </pre>
       </td>
-      <td>["firstname", "lastname"]</td>
+      <td>1) "myKey" 2) "myCounter"</td>
     </tr>
     <tr>
       <td colspan="4">
@@ -51,7 +51,7 @@ KEYS *name
       <td>
         <pre>
           <code>{`
-EXISTS mykey
+EXISTS myKey
 `}</code>
         </pre>
       </td>
@@ -69,7 +69,7 @@ EXISTS mykey
       <td>
         <pre>
           <code>{`
-EXPIRE mykey 120
+EXPIRE myKey 120
 `}</code>
         </pre>
       </td>
@@ -83,12 +83,30 @@ EXPIRE mykey 120
       </td>
     </tr>
     <tr>
+      <td>TTL</td>
+      <td>TTL key</td>
+      <td>
+        <pre>
+          <code>{`
+TTL myKey
+`}</code>
+        </pre>
+      </td>
+      <td>(integer) 113</td>
+    </tr>
+    <tr>
+      <td colspan="4">
+        <em>Description:</em> Returns the remaining time to live of a key that
+        has a timeout.<em>Time Complexity:</em> O(1)
+      </td>
+    </tr>
+    <tr>
       <td>PERSIST</td>
       <td>PERSIST key</td>
       <td>
         <pre>
           <code>{`
-PERSIST mykey
+PERSIST myKey
 `}</code>
         </pre>
       </td>
@@ -102,24 +120,6 @@ PERSIST mykey
       </td>
     </tr>
     <tr>
-      <td>TTL</td>
-      <td>TTL key</td>
-      <td>
-        <pre>
-          <code>{`
-TTL mykey
-`}</code>
-        </pre>
-      </td>
-      <td>(integer) 113</td>
-    </tr>
-    <tr>
-      <td colspan="4">
-        <em>Description:</em> Returns the remaining time to live of a key that
-        has a timeout.<em>Time Complexity:</em> O(1)
-      </td>
-    </tr>
-    <tr>
       <td>SCAN</td>
       <td>SCAN cursor [MATCH pattern] [COUNT count]</td>
       <td>
@@ -129,7 +129,14 @@ SCAN 0 MATCH my* COUNT 2
 `}</code>
         </pre>
       </td>
-      <td>1) "0" 2) 1) "mykey" 2) "myotherkey"</td>
+      <td>1) "3" 2) 1) "myCounter" 2) "myKey"</td>
+    </tr>
+    <tr>
+      <td colspan="4">
+        <em>Description:</em> Iterates the set of keys in the currently selected
+        Redis database.<em>Time Complexity:</em> O(1) for every call. O(N) for a
+        complete iteration.
+      </td>
     </tr>
     <tr>
       <td>DEL</td>
@@ -137,7 +144,7 @@ SCAN 0 MATCH my* COUNT 2
       <td>
         <pre>
           <code>{`
-DEL mykey
+DEL myKey
 `}</code>
         </pre>
       </td>
@@ -147,13 +154,6 @@ DEL mykey
       <td colspan="4">
         <em>Description:</em> Removes the specified keys.
         <em>Time Complexity:</em> O(N)
-      </td>
-    </tr>
-    <tr>
-      <td colspan="4">
-        <em>Description:</em> Iterates the set of keys in the currently selected
-        Redis database.<em>Time Complexity:</em> O(1) for every call. O(N) for a
-        complete iteration.
       </td>
     </tr>
     <tr>
@@ -188,8 +188,8 @@ INFO keyspace
     <tr>
       <td colspan="4">
         <em>Description:</em>
-        Returns information and statistics about the server, with the following sections:
-        server, clients, memory, persistence, stats, replication, cpu, commandstats,
+        Returns information and statistics about the server, with the different sections
+        like - server, clients, memory, persistence, stats, replication, cpu, commandstats,
         latencystats, sentinel, cluster, modules, keyspace, errorstats.<em>
           Time Complexity:
         </em> O(1)
@@ -201,6 +201,97 @@ INFO keyspace
 </TabItem>
 
 <TabItem value="NODE_JS">
+
+```js
+/*
+    KEYS pattern
+    Returns all keys matching pattern.
+    Time Complexity: O(N)
+    */
+const keysResult = await client.keys('my*');
+console.log(keysResult); // ["myKey", "myCounter"]
+
+/*
+    EXISTS key [key ...]
+    Checks if one or more keys exist.
+    Time Complexity: O(N)
+    */
+const existsResult = await client.exists('myKey');
+console.log(existsResult); // 1
+
+/*
+    EXPIRE key seconds
+    Set a timeout on a key. After the timeout has expired, the key will automatically be deleted.
+    Time Complexity: O(1)
+    */
+const expireResult = await client.expire('myKey', 120);
+console.log(expireResult); // true
+
+/*
+    TTL key
+    Returns the remaining time to live of a key that has a timeout.
+    Time Complexity: O(1)
+    */
+const ttlResult = await client.ttl('myKey');
+console.log(ttlResult); // 113
+
+/*
+    PERSIST key
+    Removes the expiration from a key.
+    Time Complexity: O(1)
+    */
+const persistResult = await client.persist('myKey');
+console.log(persistResult); // true
+
+/*
+    SCAN cursor [MATCH pattern] [COUNT count]
+    Iterates the set of keys in the currently selected Redis database.
+    Time Complexity: O(1) for every call. O(N) for a complete iteration.
+    */
+const scanOptions = {
+  TYPE: 'string',
+  MATCH: 'my*',
+  COUNT: 2,
+};
+let cursor = 0;
+
+// scan 1
+let scanResult = await client.scan(cursor, scanOptions);
+console.log(scanResult); // { cursor: 4, keys: [ 'myCounter', 'myKey' ] }
+
+// scan 2
+cursor = scanResult.cursor;
+scanResult = await client.scan(cursor, scanOptions);
+console.log(scanResult); //{ cursor: 12, keys: [ 'myOtherkey' ] }
+
+// ... scan n
+
+console.log('OR use any loop to continue the scan by cursor value');
+cursor = 0;
+do {
+  scanResult = await client.scan(cursor, scanOptions);
+  console.log(scanResult);
+  cursor = scanResult.cursor;
+} while (cursor != 0);
+
+/*
+    DEL key [key ...]
+    Removes the specified keys.
+    Time Complexity: O(N)
+    */
+const delResult = await client.del('myKey');
+console.log(delResult); // 1
+
+/*
+    INFO [section]
+    Returns information and statistics about the server, with the different sections
+        like - server, clients, memory, persistence, stats, replication, cpu, commandstats,
+        latencystats, sentinel, cluster, modules, keyspace, errorstats.
+    Time Complexity: O(1)
+    */
+let infoResult = await client.info('keyspace');
+console.log(infoResult); //# Keyspace \n db0:keys=2,expires=0,avg_ttl=0"
+```
 
 </TabItem>
 
