--- a/docs/howtos/quick-start/cheat-sheets/sets.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/sets.mdx
@@ -33,7 +33,7 @@ import TabItem from '@theme/TabItem';
       <td>
         <pre>
           <code>{`
-SADD myset "Hello"
+SADD mySet "Hello"
 `}</code>
         </pre>
       </td>
@@ -51,7 +51,7 @@ SADD myset "Hello"
       <td>
         <pre>
           <code>{`
-SMEMBERS myset
+SMEMBERS mySet
 `}</code>
         </pre>
       </td>
@@ -69,7 +69,7 @@ SMEMBERS myset
       <td>
         <pre>
           <code>{`
-SCARD myset
+SCARD mySet
 `}</code>
         </pre>
       </td>
@@ -87,7 +87,7 @@ SCARD myset
       <td>
         <pre>
           <code>{`
-SISMEMBER myset "Hello"
+SISMEMBER mySet "Hello"
 `}</code>
         </pre>
       </td>
@@ -100,30 +100,12 @@ SISMEMBER myset "Hello"
       </td>
     </tr>
     <tr>
-      <td>SREM</td>
-      <td>SREM key member [member ...]</td>
-      <td>
-        <pre>
-          <code>{`
-SREM myset "Hello"
-`}</code>
-        </pre>
-      </td>
-      <td>(integer) 1</td>
-    </tr>
-    <tr>
-      <td colspan="4">
-        <em>Description:</em> Removes the specified members from the set stored
-        at key.
-      </td>
-    </tr>
-    <tr>
       <td>SDIFF</td>
       <td>SDIFF key1 [key2]</td>
       <td>
         <pre>
           <code>{`
-SDIFF myset myotherset
+SDIFF mySet myOtherSet
 `}</code>
         </pre>
       </td>
@@ -142,7 +124,7 @@ SDIFF myset myotherset
       <td>
         <pre>
           <code>{`
-SDIFFSTORE mynewset myset myotherset
+SDIFFSTORE myNewSet mySet myOtherSet
 `}</code>
         </pre>
       </td>
@@ -155,12 +137,90 @@ SDIFFSTORE mynewset myset myotherset
         <em>Time Complexity:</em> O(N)
       </td>
     </tr>
+    <tr>
+      <td>SREM</td>
+      <td>SREM key member [member ...]</td>
+      <td>
+        <pre>
+          <code>{`
+SREM mySet "Hello"
+`}</code>
+        </pre>
+      </td>
+      <td>(integer) 1</td>
+    </tr>
+    <tr>
+      <td colspan="4">
+        <em>Description:</em> Removes the specified members from the set stored
+        at key.
+      </td>
+    </tr>
   </tbody>
 </table>
 
 </TabItem>
 
 <TabItem value="NODE_JS">
+
+```js
+/*
+    SADD key member [member ...]
+    Adds the specified members to the set stored at key.
+    Time Complexity: O(N)
+    */
+const sAddResult = await client.sAdd('mySet', 'Hello');
+console.log(sAddResult); // 1
+
+/*
+    SMEMBERS key
+    Returns all the members of the set value stored at key.
+    Time Complexity: O(N)
+    */
+const sMembersResult = await client.sMembers('mySet');
+console.log(sMembersResult); // ["Hello"]
+
+/*
+    SCARD key
+    Returns the set cardinality (number of elements) of the set stored at key.
+    Time Complexity: O(1)
+    */
+const sCardResult = await client.sCard('mySet');
+console.log(sCardResult); // 1
+
+/*
+    SISMEMBER key member
+    Returns if member is a member of the set stored at key.
+    Time Complexity: O(1)
+    */
+const sIsMemberResult = await client.sIsMember('mySet', 'Hello');
+console.log(sIsMemberResult); // true
+
+/*
+    SDIFF key1 [key2]
+    Returns the members of the set resulting from the difference between the first set and all the successive sets.
+    Time Complexity: O(N)
+    */
+const sDiffResult = await client.sDiff(['mySet', 'myOtherSet']);
+console.log(sDiffResult); // ["Hello"]
+
+/*
+    SDIFFSTORE destination key1 [key2]
+    This command is equal to SDIFF, but instead of returning the resulting set, it is stored in destination.
+    Time Complexity: O(N)
+    */
+const sDiffStoreResult = await client.sDiffStore('myNewSet', [
+  'mySet',
+  'myOtherSet',
+]);
+console.log(sDiffStoreResult); // 1
+
+/*
+    SREM key member [member ...]
+    Removes the specified members from the set stored at key.
+    */
+const sRemResult = await client.sRem('mySet', 'Hello');
+console.log(sRemResult); // 1
+```
 
 </TabItem>
 
