--- a/docs/howtos/quick-start/cheat-sheets/strings.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/strings.mdx
@@ -33,7 +33,7 @@ import TabItem from '@theme/TabItem';
       <td>
         <pre>
           <code>{`
-SET mykey "Hello"
+SET myKey "Hello"
 `}</code>
         </pre>
       </td>
@@ -52,7 +52,7 @@ SET mykey "Hello"
       <td>
         <pre>
           <code>{`
-GET mykey
+GET myKey
 `}</code>
         </pre>
       </td>
@@ -70,11 +70,11 @@ GET mykey
       <td>
         <pre>
           <code>{`
-MGET mykey nonexistantkey
+MGET myKey nonExistentKey
 `}</code>
         </pre>
       </td>
-      <td>["Hello", nil]</td>
+      <td>1) "Hello" 2) (nil)</td>
     </tr>
     <tr>
       <td colspan="4">
@@ -89,7 +89,7 @@ MGET mykey nonexistantkey
       <td>
         <pre>
           <code>{`
-INCR mycounter
+INCR myCounter
 `}</code>
         </pre>
       </td>
@@ -108,6 +108,40 @@ INCR mycounter
 </TabItem>
 
 <TabItem value="NODE_JS">
+
+```js
+/*
+  SET key value
+  Set key to hold the string value. If key already holds a value, it is overwritten, regardless of its type.
+  Time Complexity: O(1)
+  */
+const setResult = await client.set('myKey', 'Hello');
+console.log(setResult); // "OK"
+
+/*
+  GET key
+  Get the string value of key. If the key does not exist the special value nil is returned.
+  Time Complexity: O(1)
+  */
+const getResult = await client.get('myKey');
+console.log(getResult); // "Hello"
+
+/*
+  MGET key [key ...]
+  Returns the values of all specified keys. For every key that does not hold a string value or does not exist, the special value nil is returned.
+  Time Complexity: O(N)
+  */
+const mGetResult = await client.mGet(['myKey', 'nonExistentKey']);
+console.log(mGetResult); // ["Hello", null]
+
+/*
+  INCR key
+  Increments the number stored at key by one. If the key does not exist, it is set to 0 before performing the operation.
+  Time Complexity: O(1)
+  */
+const incrResult = await client.incr('myCounter');
+console.log(incrResult); // 1
+```
 
 </TabItem>
 
